--- a/Table.html
+++ b/Table.html
@@ -3,6 +3,7 @@
 <title>HTML</title>
 </head>
 <body>
+<p>Added a line in training</p>
 This is a table
 <table border="1">
 <caption>Employee Data</caption>
