Update Second.html in new branch

--- a/Second.html
+++ b/Second.html
@@ -6,6 +6,7 @@
 <!-- this is a comment in html -->
 <img src="logo.png" alt="Logo" height=100 />
 lists 
+  <p>this is new branch in the git</p>
 Ordered List - <ol>
 <br>
 List of Browsers
